noinst_LIBRARIES = libarticle.a

libarticle_a_SOURCES = \
	articleadmin.cpp \
\
	drawareabase.cpp \
	drawareamain.cpp \
	drawareapopup.cpp \
\
	articleviewbase.cpp \
	articleview.cpp \
	articleviewpreview.cpp \
	articleviewpopup.cpp \
\
	layouttree.cpp \
	font.cpp \
	preference.cpp

noinst_HEADERS = \
	articleadmin.h \
\
	drawareabase.h \
	drawareamain.h \
	drawareapopup.h \
\
	articleviewbase.h \
	articleview.h \
	articleviewpreview.h \
	articleviewpopup.h \
\
	layouttree.h \
	font.h \
	preference.h \
	caret.h \
	scrollinfo.h \
	toolbar.h 

AM_CXXFLAGS = @GTKMM_CFLAGS@
INCLUDES = -I$(top_srcdir)/src
