noinst_LIBRARIES = libarticle.a

libarticle_a_SOURCES = \
	articleadmin.cpp \
\
	drawareabase.cpp \
	drawareamain.cpp \
	drawareainfo.cpp \
	drawareapopup.cpp \
	embeddedimage.cpp \
\
	articleviewbase.cpp \
	articleview.cpp \
	articleviewpreview.cpp \
	articleviewinfo.cpp \
	articleviewpopup.cpp \
\
	layouttree.cpp \
	font.cpp \
	preference.cpp \
	toolbar.cpp

noinst_HEADERS = \
	articleadmin.h \
\
	drawareabase.h \
	drawareamain.h \
	drawareainfo.h \
	drawareapopup.h \
	embeddedimage.h \
\
	articleviewbase.h \
	articleview.h \
	articleviewpreview.h \
	articleviewinfo.h \
	articleviewpopup.h \
\
	layouttree.h \
	font.h \
	preference.h \
	caret.h \
	scrollinfo.h \
	toolbar.h 

AM_CXXFLAGS = @GTKMM_CFLAGS@
INCLUDES = -I$(top_srcdir)/src
