noinst_LIBRARIES = libarticle.a

libarticle_a_SOURCES = \
	articleadmin.cpp \
\
	drawareabase.cpp \
	drawareamain.cpp \
	drawareainfo.cpp \
	drawareapopup.cpp \
	embeddedimage.cpp \
\
	articleviewbase.cpp \
	articleview.cpp \
	articleviewsearch.cpp \
	articleviewpreview.cpp \
	articleviewinfo.cpp \
	articleviewpopup.cpp \
	articleviewetc.cpp \
\
	layouttree.cpp \
	font.cpp \
	preference.cpp \
	toolbar.cpp \
	toolbarsimple.cpp \
	toolbarsearch.cpp

noinst_HEADERS = \
	articleadmin.h \
\
	drawareabase.h \
	drawareamain.h \
	drawareainfo.h \
	drawareapopup.h \
	embeddedimage.h \
\
	articleviewbase.h \
	articleview.h \
	articleviewsearch.h \
	articleviewpreview.h \
	articleviewinfo.h \
	articleviewpopup.h \
	articleviewetc.h \
\
	layouttree.h \
	font.h \
	preference.h \
	caret.h \
	scrollinfo.h \
	toolbar.h \
	toolbarsimple.h \
	toolbarsearch.h

AM_CXXFLAGS = @GTKMM_CFLAGS@
AM_CPPFLAGS = -I$(top_srcdir)/src
