noinst_LIBRARIES = libbbslist.a

libbbslist_a_SOURCES = \
	bbslistadmin.cpp \
	bbslistviewbase.cpp \
	bbslistview.cpp \
	favoriteview.cpp \
	selectlistview.cpp \
	selectdialog.cpp \
	editlistwin.cpp \
	addetcdialog.cpp \
	columns.cpp \
	toolbar.cpp

noinst_HEADERS = \
	bbslistadmin.h \
	bbslistviewbase.h
	bbslistview.h \
	favoriteview.h \
	selectlistview.h \
	selectdialog.h \
	editlistwin.h \
	addetcdialog.h \
	columns.h \
	toolbar.h

AM_CXXFLAGS = @GTKMM_CFLAGS@ @ONIG_CFLAGS@
INCLUDES = -I$(top_srcdir)/src
