sources = [
  'addetcdialog.cpp',
  'bbslistadmin.cpp',
  'bbslistview.cpp',
  'bbslistviewbase.cpp',
  'columns.cpp',
  'editlistwin.cpp',
  'favoriteview.cpp',
  'historyview.cpp',
  'selectdialog.cpp',
  'selectlistview.cpp',
  'toolbar.cpp',
]


bbslist_lib = static_library(
  'bbslist', sources,
  dependencies : gtkmm_dep,
  include_directories : include_directories('..'),
)
