sources = [
  'boardadmin.cpp',
  'boardview.cpp',
  'boardviewbase.cpp',
  'boardviewlog.cpp',
  'boardviewnext.cpp',
  'boardviewsidebar.cpp',
  'preference.cpp',
  'toolbar.cpp',
]


board_lib = static_library(
  'board', sources,
  dependencies : gtkmm_dep,
  include_directories : include_directories('..'),
)
