noinst_LIBRARIES = libconfig.a

libconfig_a_SOURCES = \
	globalconf.cpp  mousekeyconf.cpp keyconfig.cpp mouseconfig.cpp buttonconfig.cpp

noinst_HEADERS = \
	globalconf.h  mousekeyconf.h mousekeyitem.h keyconfig.h  mouseconfig.h buttonconfig.h

AM_CXXFLAGS = @GTKMM_CFLAGS@
INCLUDES = -I$(top_srcdir)/src
